Replaced gradle build system by both maven and batch.
Added both Maven config to compile the files using mvn package command and a .bat file to compile without using any file system but the plain javac command. This second scripts also runs the server.

Refactored port in test to local variable.

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,6 @@
 # .idea/dynamic.xml
 # .idea/uiDesigner.xml
 
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
-
 # Mongo Explorer plugin:
 # .idea/mongoSettings.xml
 
@@ -32,12 +28,11 @@
 *.ipr
 *.iws
 
-## Plugin-specific files:
+# Compiled java
+*.class
 
-# IntelliJ
-/out/
-/gradle/
-/build/
+# Maven
+target/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
