Added load keep-alive tests in Python and shell bash.
- Changed retrieved file in tests by index.html.

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
         					<arguments>
 		                        <argument>52052</argument>
 		                        <argument>10</argument>
-		                        <argument>.</argument>
+		                        <argument>web/</argument>
         					</arguments>
 	                    </configuration>
 	                </execution>
